fixing clipping issue

--- a/src/styles/components/containers/_fold.scss
+++ b/src/styles/components/containers/_fold.scss
@@ -68,7 +68,6 @@
   margin-left: 12px;
   padding-top: 2px;
   font-size: $font-size-medium;
-  overflow: hidden;
   white-space: nowrap;
   max-width: 150px;
   letter-spacing: 0.2px;
